--- a/development.ini
+++ b/development.ini
@@ -15,6 +15,8 @@ pyramid.includes =
     pyramid_debugtoolbar
     pyramid_tm
 
+environment = development
+
 door_controller_error_path = /tmp/door_controller_error.txt
 door_controller_pid_path = /tmp/door_controller.pid
 
@@ -39,7 +41,7 @@ port = 6543
 ###
 
 [loggers]
-keys = root, hocuspocusweb, sqlalchemy
+keys = root, hocuspocusweb, sqlalchemy, tests
 
 [handlers]
 keys = console
@@ -49,20 +51,37 @@ keys = generic
 
 [logger_root]
 level = INFO
-handlers = console
+handlers = filelog
 
 [logger_hocuspocusweb]
 level = DEBUG
-handlers =
+handlers = filelog
+qualname = hocuspocusweb
+
+[logger_tests]
+level = DEBUG
+handlers = testfilelog
 qualname = hocuspocusweb
 
 [logger_sqlalchemy]
 level = INFO
-handlers =
+handlers = filelog
 qualname = sqlalchemy.engine
 # "level = INFO" logs SQL queries.
 # "level = DEBUG" logs SQL queries and results.
 # "level = WARN" logs neither.  (Recommended for production systems.)
+
+[handler_filelog]
+class = FileHandler
+args = ('%(here)s/debug_logs.log','a')
+level = DEBUG
+formatter = generic
+
+[handler_testfilelog]
+class = FileHandler
+args = ('%(here)s/test_logs.log','a')
+level = DEBUG
+formatter = %(message)s\n\r
 
 [handler_console]
 class = StreamHandler
